--- a/src/components/rentsBlock/rentTypesCardsBlock.pug
+++ b/src/components/rentsBlock/rentTypesCardsBlock.pug
@@ -22,20 +22,20 @@ include ../content/content.pug
                     .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Коттеджи и усадьбы
 
                 .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
-                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowRight'})
         .rentTypesCardsBlock_cards_innerContainer
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'baths')
                 .rentTypesCardsBlock_cards_innerContainer_card_wrapper
                     .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Попариться в бане с друзьями
                     .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Бани и сауны
                 .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
-                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowRight'})
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'cars')
                 .rentTypesCardsBlock_cards_innerContainer_card_wrapper
                     .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Если срочно нужна машина
                     .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Авто на прокат
                 .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
-                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowRight'})
     .rentTypesCardsBlock_buttonList
         .rentTypesCardsBlock_buttonList_item
             .rentTypesCardsBlock_buttonList_item_title
