--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,8 @@ body {
   height: 3538px;
   overflow: auto;
   display: flex;
-  
+  z-index: 100;
+  //position: relative;
 }
 
 .content_container {
@@ -29,4 +30,9 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  //position: relative;
+  //z-index: 100;
+
 }
+
+
