--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -9,9 +9,8 @@ block content
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
           include ../../components/rentsBlock/rentTypesCardsBlock.pug
+          .content_container_spaceContainer(class= 'first')
           include ../../components/rentsBlock/rentRoomsCardsBlock.pug
-          .content_container_spaceContainer 
-          .content_container_dayRentContainer 
-          .content_container_servicesContainer
+          include ../../components/servicesBlock/servicesBlockComponent.pug
           .content_container_spaceContainer
           .content_container_exampleContainer
