--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -156,7 +156,12 @@ $hoverLine: 2px;
       background: #FFD54F;
       border-radius: 22px;
       color: $black;
-  
+
+  &.gradient {
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(106.06deg, #FFD54F 1.12%, #FEC100 97.96%);
+     box-shadow: 0px 15px 40px rgba(254, 193, 0, 0.15);
+  }
       &:hover {
           background: #FEC100;
           border-radius: 22px;
@@ -185,6 +190,7 @@ $hoverLine: 2px;
     &:hover {
       background: #F8F8F8;
     color: black;
+
   }
   &:active {
       background: white;
@@ -204,13 +210,21 @@ $hoverLine: 2px;
     width: calc(150px - 20px);
     display: flex;
     justify-content: flex-start;
-    gap: 47.5px; 
+    gap: 47.5px;
+
     &.purpleText {
         color: #664EF9;
     }
+
     div {
-        background-color: red;
+        &.menuContent {
+            position: absolute;
+            bottom: 74px;
+            margin-left: -80px;
+            display: none;
+        }
     }
+
     ul {
         width: inherit;
         height: auto;
@@ -249,6 +263,11 @@ $hoverLine: 2px;
     }
     &:hover {
         background: rgba(102, 78, 249, 0.1);
+        div {
+            &.menuContent {
+                display: block;
+            }
+        }    
     }
     &.rentContainer {
         padding: 11px 14px;
@@ -283,7 +302,9 @@ $hoverLine: 2px;
             display: block;
         }
         div {
-            background-color: green;
+            &.menuContent {
+                display: block;
+            }
         }
     }
       
@@ -300,9 +321,6 @@ $hoverLine: 2px;
 .menuContent {
     width: 274px;
     height: 297px;
-    position: absolute;
-    bottom: 74px;
-    //margin-left: -80px;
 
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
@@ -403,6 +421,9 @@ $hoverLine: 2px;
 //standard button styling--------------------------------------------------------------------------
 .stdButtonIcon {
   @include centringMixin;
+  &.white {
+    path {stroke: white;}  
+  }
   &.black {
     path {
         stroke: $black;
@@ -442,6 +463,19 @@ $hoverLine: 2px;
         }
         path {
             stroke: #FFFFFF;
+        }         
+    }
+    &.purple {
+        width: 39.43px;
+        height: 39.43px;
+        box-sizing: border-box;
+        border: 1px solid #664EF9;
+        border-radius: 50%;
+        &:hover {
+            background: rgba(102, 78, 249, 0.1);
+        }
+        path {
+            stroke: #664EF9;
         }         
     }
 
