--- a/src/components/rentsBlock/rentRoomsCardsBlock.pug
+++ b/src/components/rentsBlock/rentRoomsCardsBlock.pug
@@ -3,7 +3,7 @@ include ../content/content.pug
 include ./rentCard.pug
 
 .rentRoomsCardsBlock
-    .rentRoomsCardsBlock_background asdasdsd
+    .rentRoomsCardsBlock_background
     .rentRoomsCardsBlock_innerContainer
         .rentRoomsCardsBlock_innerContainer_top
             .rentRoomsCardsBlock_innerContainer_top_title
@@ -17,7 +17,23 @@ include ./rentCard.pug
                     {text: 'Район', cls:'area', color: 'menu rentContainer', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '185px' , menuType: 'list'},
                     [{text: 'Район 1'}, {text: 'Район 2'}, {text: 'Район 3'}, {text: 'Район 4'}, {text: 'Район 5'}, {text: 'Район 6'}, {text: 'Район 7'},])
         .rentRoomsCardsBlock_innerContainer_cards
-            +rentCardList
+            +rentCardList([
+                {status: 'Gold',photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Vasye', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'},},
+                {status: 'Gold',photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'},},
+                {status: 'Gold',photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'},},])
+        .rentRoomsCardsBlock_innerContainer_nav
+            
+            +circleBtn({cls: 'button', color: 'purple', icon: 'arrowLeft'})
+            +circleBtn({cls: 'button', color: 'purple', icon: 'arrowRight'})
+        
+        .rentRoomsCardsBlock_innerContainer_all
+            .rentRoomsCardsBlock_innerContainer_all_left
+                .rentRoomsCardsBlock_innerContainer_all_left_number 341 <span>+</span>
+                .rentRoomsCardsBlock_innerContainer_all_left_description Предложений по Минску
+            hr
+            .rentRoomsCardsBlock_innerContainer_all_right
+                +stdBtn({text: 'Посмотреть все', cls:'primary', color: 'purple', type: 'w7', icon: 'arrowLeft', iconColor: 'white', gap: '30px', width: '177px'})
+
 
             
             
