--- a/src/components/spaceContainer.pug
+++ b/src/components/spaceContainer.pug
@@ -1,14 +1,22 @@
-.spaceContainer
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
-    .spaceContainer_item
+mixin spaceContainer(container, color)
+    .spaceContainer(class =container)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
+        .spaceContainer_item(class= color)
     
