--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,10 +13,12 @@ body {
 }
 
 .main_content {
+    //width: 100vw;
 }
 
 .content {
   height: 3538px;
+  
   overflow: auto;
   display: flex;
   z-index: 100;
