--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -9,8 +9,7 @@ block content
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
           include ../../components/rentsBlock/rentTypesCardsBlock.pug
-          .content_container_spaceContainer(class= 'first')
           include ../../components/rentsBlock/rentRoomsCardsBlock.pug
           include ../../components/servicesBlock/servicesBlockComponent.pug
-          .content_container_spaceContainer
-          .content_container_exampleContainer
+          include ../../components/exampleBlock/exampleBlockComponent.pug
+          
