--- a/src/components/rentsBlock/rentTypesCardsBlock.pug
+++ b/src/components/rentsBlock/rentTypesCardsBlock.pug
@@ -1,8 +1,10 @@
 include ../buttons/buttons.pug
 include ../content/content.pug
+include ../spaceContainer.pug
 
 .rentTypesCardsBlock
     .rentTypesCardsBlock_cards
+        +spaceContainer('cards', 'yellow')
         .rentTypesCardsBlock_cards_innerContainer(class = 'firstBlock')
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'rooms')
                 .rentTypesCardsBlock_cards_innerContainer_card_wrapper
