--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -610,15 +610,15 @@
     }
 
     &.services1 {
-        right: 9.5%;
+        right: 4.5%;
         top: 7%; 
     }
     &.services2 {
-        right: 11.5%;
+        right: 7%;
         top: 106.5%; 
     }
     &.example {
-        left: 24.5%;
+        left: 27.5%;
         top: 58%; 
     }
     &_item {
@@ -641,6 +641,9 @@
     @include centringMixin;
     margin-bottom: 137px;
     width: 1440px;
+    position: relative;
+    
+
     &_innerContainer {
         position: relative;
         display: flex;
@@ -659,6 +662,26 @@
             img {
               //position: absolute;
               z-index: 0;
+              
+            }
+            &.cathalog {
+                
+                width: 1440px;
+                height: 310px;
+                background-position: center center;
+                background-repeat: no-repeat;
+                overflow: hidden;
+                
+                img {
+                    
+                    height: 100%;
+                    width: 100%;
+                    /* IE 8 */
+                    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                    /* IE 5-7 */
+                    filter: alpha(opacity=0);
+                    /* modern browsers */
+                }
             }
           }
 
@@ -761,6 +784,7 @@
     flex-direction: column;
     //justify-content: center;
     align-items: center;
+    margin-bottom: 100px;
     &_innerContainer {
         width: calc(100% - 160px);
         margin-left: 80px;
@@ -878,6 +902,148 @@
                 path {
                     stroke: $color
                 }
+            }
+        }
+    }
+}
+
+.content_container_searchBlockCathalogContainer {
+    width: 1440px;
+    position: relative;
+
+    &_background {
+        position: absolute;
+        z-index: 0;
+        background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
+        opacity: 0.1;
+        width: 100%;
+        height: 100%;
+    }
+
+    &_innerContainer {
+        position: relative;
+        z-index: 10;
+        width: calc(100% - 160px);
+        margin-top: 42px;
+        margin-left: 80px;
+        margin-right: 80px;
+        margin-bottom: 57px;
+
+        &_filter {
+            &_root {
+                display: flex;
+                gap: 7px;
+                align-items: center;
+                margin-bottom: 30px;
+
+                &_point {
+                    width: 3px;
+                    height: 3px;
+                    border-radius: 50%;
+                    background: #4E64F9;
+                }
+
+                &_title {
+                    @include fontStd(#686868, 14px, 400, 100%)
+                }
+            }
+            &_title {
+                @include fontStd($black, 25px, 700, 100%);
+                margin-bottom: 40px;
+            }
+            &_buttons {
+                &_title {
+                    @include fontStd($black, 16px, 500, 100%);
+                    margin-bottom: 25px;
+                }
+                &_itemList {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    gap: 15px;
+
+                    &_item {
+                        @include noSelect; 
+                        padding: 6px 10px;
+                        gap: 10px;
+                        background: rgba(102, 78, 249, 0.1);
+                        border-radius: 17px;
+                        @include fontStd(#664EF9, 14px, 400, 100%);
+
+                        &:hover {
+                            background: rgba(102, 78, 249, 0.2);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.content_container_searchBlockCathalogFilterContainer {
+    width: 1440px;
+    position: relative;
+    
+    &_innerContainer {
+
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        &_top {
+
+            width: 100%;
+            height: 82px;
+            background: #FFFFFF;
+            box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.08);
+
+            &_wrapper {
+                
+                width: calc(100% - 202px);
+                height: calc(100% - 45px);
+                padding-top: 22px;
+                padding-bottom: 23px;
+                padding-left: 100px;
+                padding-right: 102px;
+
+                display: flex;
+                align-items: center;
+
+            }
+            hr {
+                margin: 0 25px;
+                height: 80px;
+                opacity: 0.1;
+                border: 1px solid #664EF9;
+                &.first {
+
+                }
+                &.second {
+                    margin-right: 9px;
+                }
+                &.third {
+                    margin-left: 9px;
+                    margin-right: 50px;
+                }
+            }
+            &_item {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+
+                &_buttons {
+                    display: flex;
+                    align-items: center;
+                    gap: 6px
+                }
+                span {
+                    @include fontStd(#664EF9, 14px, 500, 17px);
+                    white-space: nowrap;
+                }
+            }
+            &_right {
+                display: flex;
+                gap: 30px;
             }
         }
     }
